PyMaker/datas/object2/RawHTML/i7301/Python_DOC_referPages.why-cant-a-yield-expression-be-a-function-argument.txt
<div class="post-text" itemprop="text">
<p>I simply want to tidy up the following code.</p>
<pre><code>def well_known_generator():
    print('started')
    received = yield 100
    print(received)
    received = yield 200
    print(received)
    received = yield 300
    print('end')

g = well_known_generator()
print(next(g), g.send(None), g.send(None), g.send(None))
</code></pre>
<p>I just moved the yield expression into the print function, but a syntax error occurs. I'm just wondering why a yield expression can't be a function argument like below? If yield works like an expression, it should be okay as a function argument.</p>
<pre><code>def well_known_generator():
    print('start')
    print(yield 100)
    print(yield 200)
    print(yield 300)
    print('end')

g = well_known_generator()
print(next(g), g.send(None), g.send(None), g.send(None))

SyntaxError: invalid syntax (&lt;ipython-input-58-bdb3007bb80f&gt;, line 3) 
  File "&lt;ipython-input-58-bdb3007bb80f&gt;", line 3
    print(yield 100)
              ^
SyntaxError: invalid syntax
</code></pre>
</div>
<div class="post-text" itemprop="text">
<p>You need to add another pair of parentheses around <code>yield ...</code>:</p>
<pre><code>def well_known_generator():
    print('start')
    print((yield 100))
    print((yield 200))
    print((yield 300))
    print('end')
</code></pre>
<p>The parentheses are <em>part of the <a href="https://docs.python.org/3/reference/expressions.html#yield-expressions" rel="noreferrer"><code>yield</code> expression syntax</a></em>:</p>
<pre><code>yield_atom       ::=  "(" yield_expression ")"
</code></pre>
<p>but the parentheses are optional when it's the only expression in an assignment statement or a statement expression:</p>
<blockquote>
<p>The parentheses may be omitted when the yield expression is the sole expression on the right hand side of an assignment statement.</p>
</blockquote>
<p>Inside a call expression (such as <code>print(...)</code>), the parentheses can't be omitted.</p>
</div>
